Stabilize product cart order journey
